Extended Backus-Naur Form.ebnf
<program> ::= <statement> | <statement> <program>
<statement> ::= <declaration> | <forloop> | <addition>
<declaration> ::= "let" <variable> "=" <numberset> ";"

<numberset> ::= "[" <numberlist> "]"
<numberlist> ::= <number> | {<number> "," <numberlist>}

<assignment> ::= <variable> "=" <addition> ";"
<count> ::= <variable> "=" <addition> ";"
<forloop> ::= "for" <variable> "in" <numberlist> ":" <assignment> <count>
return_stmt ::= "return" [ assignment "/" <count ]

<addition> ::= <term> 
             | <addition> "+" <term>

<term> ::= <number>
<number> ::= <digit> <digit>

<variable> ::= <letter> | (<letter> <variable>)

<letter> ::= "A" | "B" | ... | "Z" | "a" | ... | "y" | "z"

<digit> ::= "0" | "1" | ... | "8" | "9"

<type> ::= "number" | "string" | "boolean"
